# angr

./: .dockerignore  .gdb_history  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  2026-06-03-084714-rustyail.txt  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Dockerfile  INSTALL.md  KNOWLEDGE_COVERAGE_REPORT.md  LICENSE  MANIFEST.in  Makefile  README.md  README_angr.md  SECURITY.md  __init__.py  annocfg.py  ansi.py  appveyor.yml  azure-pipelines.yml  bin_info.py  binary.py  binary_info.py  cdg.py  cfg.py  common.h  ddg.py  demo.py  errors.py  exit_wrapper.py  function.py  helpers.py  install-unicorn.sh  (+49 more)
.azure-pipelines/: master-ubuntu.yml  master.yml  nightly-ubuntu.yml  nightly.yml  pr-ubuntu.yml  pr.yml
.github/: copilot-instructions.md  dependabot.yml
angr/: __init__.py  __main__.py  ail_callable.py  analysis.py  angrlib.pyi  annocfg.py  artifact.py  binary.py  blade.py  block.py  bug_report.py  call_stack.py  callable.py  calling_conventions.py  capper.py  cdg.py  cfg.py  cfg_base.py  code_location.py  codenode.py  ddg.py  emulator.py  engines.py  entry_wrapper.py  enums.py  errors.py  exit_wrapper.py  extern_obj.py  factory.py  functionmanager.py  keyed_region.py  knowledge_base.py  lifter.py  llm_client.py  llm_models.py  log.py  manager.py  mergeseekr.py  orgy.py  osconf.py  (+46 more)
angr_c/: CMakeLists.txt  CMakeSettings.json
angr_c/angr_c/: CMakeLists.txt  angr_c.cpp  angr_c.hpp  block.cpp  block.hpp  lru_cache.hpp  memories.cpp  memories.hpp  vex_lifter.cpp  vex_lifter.hpp
angr_c/angr_c/memory_mixins/: address_concretization_mixin.hpp  cooperation.cpp  cooperation.hpp  data_normalization_mixin.hpp  decomposer.cpp  decomposer.hpp  endness.hpp  memory_mixin_base.cpp  memory_mixin_base.hpp  page.hpp  paged_memory_mixin.hpp  sim_memory_object.cpp  sim_memory_object.hpp  size_concretization_mixin.hpp  size_normalization_mixin.hpp
angr_c/angr_c/memory_mixins/pages/: cooperation.hpp  decomposer.cpp  decomposer.hpp  list_page.hpp  page.hpp
binaries/: FakeCrypt-stripped
corpus_tests/: README.md  conftest.py  (+4 more)
native/angr/: Cargo.toml
native/angr/scripts/: gen_vexop_names.py
native/angr/src/: ail_block.rs  ail_expr.rs  ail_stmt.rs  ail_tags.rs  ailment.rs  fuzzer.rs  icicle.rs  lib.rs  segmentlist.rs
native/angr/src/ailment/: ail_expr.rs  ail_stmt.rs  base.rs  block.rs  const_value.rs  convert_vex.rs  enums.rs  hash.rs  manager.rs  mod.rs  serialize.rs  tags.rs  utils.rs  vex_ffi.rs  vexop.rs  vexop_names.rs
native/angr/src/automaton/: dfa.rs  epsilon_nfa.rs  mod.rs  python_bindings.rs  state.rs  subset_construction.rs  symbol.rs
native/angr/src/claripy/: annotation.rs  dynsolver.rs  error.rs  macros.rs  mod.rs  prelude.rs  py_err.rs  pyslicemethodsext.rs  solver.rs  vsa.rs
native/angr/src/claripy/ast/: args.rs  base.rs  bits.rs  bool.rs  bv.rs  coerce.rs  fp.rs  mod.rs  opstring.rs  string.rs  util.rs
native/angr/src/formlang/: dfa.rs  epsilon_nfa.rs  mod.rs  python_bindings.rs  subset_construction.rs
native/angr/src/fuzzer/: corpus.rs  executor.rs  monitor.rs  mutator.rs
native/clarirs/: .gitignore  Cargo.toml
native/clarirs-core/: Cargo.toml
native/clarirs-core/src/: error.rs  smtlib.rs
native/clarirs-core/src/algorithms/: collect_vars.rs  find_variable.rs  post_order.rs  simplify.rs
native/clarirs-core/src/algorithms/excavate_ite/: tests.rs
native/clarirs-core/src/algorithms/simplify/: bv.rs  float.rs  test_bool.rs  test_bv.rs  test_float.rs
native/clarirs-core/src/ast/: annotation.rs  mod.rs  node.rs
native/clarirs-core/src/solver/: hybrid.rs
native/clarirs-py/: Cargo.toml
native/clarirs-py/benchmarks/: perf_ast.py
native/clarirs-py/src/: error.rs  prelude.rs  solver.rs  vsa.rs
native/clarirs-py/src/ast/: bool.rs  mod.rs
native/clarirs-py/tests/: test_canonicalize.py  test_vsa_bv_ops.py  test_vsa_simplify_solving.py
native/clarirs-vsa/: Cargo.toml
native/clarirs-vsa/src/: lib.rs  reduce.rs  solver.rs  strided_interval.rs
native/clarirs-vsa/src/reduce/: bv.rs
native/clarirs-vsa/src/strided_interval/: modular_arithmetic.rs
native/clarirs-z3/: Cargo.toml
native/clarirs-z3/src/: rc.rs  solver.rs
native/clarirs-z3/src/astext/: test_float.rs
native/clarirs/crates/clarirs-vsa/src/: cardinality.rs
native/clarirs/crates/clarirs_core/src/algorithms/: excavate_ite.rs
native/clarirs/crates/clarirs_core/src/algorithms/excavate_ite/tests/: bitvec_test.rs
native/clarirs/crates/clarirs_core/src/algorithms/simplify/: string.rs
native/clarirs/crates/clarirs_core/src/ast/: factory.rs
native/clarirs/crates/clarirs_core/src/solver/: composite.rs
native/clarirs/crates/clarirs_core/src/solver_mixins/: simplification.rs
native/clarirs/crates/clarirs_num/: Cargo.toml
native/clarirs/crates/clarirs_num/src/bitvec/: comparison.rs
native/clarirs/crates/clarirs_py/: Cargo.toml
native/clarirs/crates/clarirs_py/benchmarks/: perf_ast.py
native/clarirs/crates/clarirs_py/src/: pyslicemethodsext.rs
native/clarirs/crates/clarirs_py/src/ast/: bits.rs  bv.rs
native/clarirs/crates/clarirs_py/tests/: test_bool_ops.py  test_bv_ops.py  test_fp_ops.py  test_solver_cacheless.py  test_string_ops.py  test_vsa_bv_ops.py  test_vsa_simplify_solving.py
native/clarirs/crates/clarirs_z3/src/: astext.rs  lib.rs
native/clarirs_core/: Cargo.toml
native/clarirs_core/src/: context.rs  error.rs  lib.rs
native/clarirs_core/src/algorithms/: canonicalize.rs  dfs.rs  mod.rs  post_order.rs  pre_order.rs  reconstruct.rs  replace.rs  simplify.rs
native/clarirs_core/src/algorithms/simplify/: bool.rs  bv.rs  float.rs  test_bv.rs
native/clarirs_core/src/ast/: op.rs
native/clarirs_core/src/solver/: concrete.rs  hybrid.rs  mod.rs
native/clarirs_core/src/solver_mixins/: concrete_early_resolution.rs  model_cache.rs  simplification.rs
native/clarirs_core/src/util/: mod.rs  precomputed_hasher.rs
native/unicornlib/: CMakeLists.txt  Makefile  Makefile-win  log.h  procedures.cpp  pymodule.cpp  sim_unicorn.cpp  sim_unicorn.hpp  uc_macro.h  unicorn_dynamic.c  unicornlib.def  vendor.sh
(+6606 files in other folders)
