[workspace]
resolver = "3"
members = ["native/angr"]

[workspace.package]
license = "BSD-2-Clause"
readme = "README.md"
keywords = [
    "analysis",
    "angr",
    "binary",
    "decompiler",
    "emulator",
    "engineering",
    "execution",
    "research",
    "reverse",
    "security",
    "symbolic",
    "vulnerability",
]
categories = ["science", "security"]
repository = "https://github.com/angr/angr.git"

[workspace.lints.clippy]
all = "warn"
cargo = "warn"
