[workspace]
resolver = "3"
members = [
    "native/angr",
    "native/clarirs_core",
    "native/clarirs_num",
    "native/clarirs_py",
    "native/clarirs_z3",
    "native/clarirs-vsa",
]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"

[workspace.package]
license = "BSD-2-Clause"
readme = "README.md"
keywords = [
    "analysis",
    "angr",
    "binary",
    "decompiler",
    "emulator",
    "engineering",
    "execution",
    "research",
    "reverse",
    "security",
    "symbolic",
    "vulnerability",
]
categories = ["science", "security"]
repository = "https://github.com/angr/angr.git"

[workspace.lints.clippy]
all = "warn"
cargo = "warn"
