[metadata]
name = angr
version = attr: angr.__version__
url = https://github.com/angr/angr
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = A multi-architecture binary analysis toolkit, with the ability to perform dynamic symbolic execution and various static analyses on binaries
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    sortedcontainers
    cachetools
    capstone >= 3.0.5rc2, != 5.0.0rc2
    dpkt
    mulpyplexer
    networkx >= 2.0, != 2.8.1
    progressbar2 >= 3
    rpyc
    cffi >= 1.14.0
    unicorn == 1.0.2rc4
    archinfo == 9.2.19.dev0
    claripy == 9.2.19.dev0
    cle == 9.2.19.dev0
    pyvex == 9.2.19.dev0
    ailment == 9.2.19.dev0
    GitPython
    psutil
    pycparser >= 2.18
    itanium_demangler
    CppHeaderParser
    protobuf >= 3.19.0
    nampa
    sympy
    colorama; platform_system=='Windows'

python_requires = >= 3.8
include_package_data = True
packages = find:

[options.extras_require]
AngrDB = sqlalchemy
pcode = pypcode == 1.0.5

[options.package_data]
angr =
    py.typed
    lib/*
