[metadata]
name = angr
version = attr: angr.__version__
description = A multi-architecture binary analysis toolkit, with the ability to perform dynamic symbolic execution and various static analyses on binaries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angr/angr
license = BSD-2-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    CppHeaderParser
    GitPython
    ailment==9.2.72
    archinfo==9.2.72
    cachetools
    capstone==5.0.0.post1
    cffi>=1.14.0
    claripy==9.2.72
    cle==9.2.72
    dpkt
    itanium-demangler
    mulpyplexer
    nampa
    networkx!=2.8.1,>=2.0
    protobuf>=3.19.0
    psutil
    pycparser>=2.18
    pyvex==9.2.72
    rich>=13.1.0
    rpyc
    sortedcontainers
    sympy
    unicorn==2.0.1.post1
    colorama;platform_system=='Windows'
python_requires = >=3.8
include_package_data = True

[options.extras_require]
AngrDB =
    sqlalchemy
docs =
    furo
    myst-parser
    sphinx
    sphinx-autodoc-typehints
pcode =
    pypcode>=1.1
testing =
    keystone-engine
    pypcode>=1.1
    pytest
    pytest-split
    pytest-xdist
    sqlalchemy

[options.package_data]
angr =
    py.typed
    lib/*
