[metadata]
name = angr
version = attr: angr.__version__
description = A multi-architecture binary analysis toolkit, with the ability to perform dynamic symbolic execution and various static analyses on binaries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angr/angr
license = BSD-2-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    CppHeaderParser
    GitPython
    ailment==9.2.118.dev0
    archinfo==9.2.118.dev0
    cachetools
    capstone==5.0.3
    cffi>=1.14.0
    claripy==9.2.118.dev0
    cle==9.2.118.dev0
    dpkt
    itanium-demangler
    mulpyplexer
    nampa
    networkx!=2.8.1,>=2.0
    protobuf>=3.19.0
    psutil
    pycparser>=2.18
    pyformlang
    pyvex==9.2.118.dev0
    rich>=13.1.0
    rpyc
    sortedcontainers
    sympy
    unicorn==2.0.1.post1
    unique-log-filter
    colorama;platform_system=='Windows'
python_requires = >=3.10
include_package_data = True

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    angr = angr.__main__:main

[options.extras_require]
AngrDB =
    sqlalchemy
docs =
    furo
    myst-parser
    sphinx
    sphinx-autodoc-typehints
pcode =
    pypcode~=3.0
testing =
    keystone-engine
    pypcode~=3.0
    pytest
    pytest-split
    pytest-xdist
    sqlalchemy

[options.package_data]
angr =
    py.typed
    lib/*
