[package]
name = "angr"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustylib"
crate-type = ["cdylib"]

[dependencies]
backtrace = "0.3.76"
icicle-fuzzing = { git = "https://github.com/angr/icicle-emu.git", rev = "9a68a5f302f08a9148e894cc41b9a351959f1950" }
icicle-vm = { git = "https://github.com/angr/icicle-emu.git", rev = "9a68a5f302f08a9148e894cc41b9a351959f1950" }
libafl = { version = "=0.15.4" }
libafl_bolts = { version = "=0.15.4" }
pcode = { git = "https://github.com/angr/icicle-emu.git", rev = "9a68a5f302f08a9148e894cc41b9a351959f1950" }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
pyo3 = { version = "0.28.3", features = ["py-clone"] }
rangemap = "1.7.1"
send_wrapper = "0.6.0"
indexmap = "2.14"
fixedbitset = "0.5"
serde = { version = "1.0.228", features = ["derive"] }
target-lexicon = "0.13.5"

[dev-dependencies]
tempfile = "3.27.0"
