[package]
name = "angr"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustylib"
crate-type = ["cdylib"]

[dependencies]
backtrace = "0.3.76"
icicle-fuzzing = { git = "https://github.com/angr/icicle-emu.git", rev = "fac77d41c845f91ba85fc072ad87bf7c3f4a28cc" }
icicle-vm = { git = "https://github.com/angr/icicle-emu.git", rev = "fac77d41c845f91ba85fc072ad87bf7c3f4a28cc" }
libafl = { version = "=0.15.4" }
libafl_bolts = { version = "=0.15.4" }
pcode = { git = "https://github.com/angr/icicle-emu.git", rev = "fac77d41c845f91ba85fc072ad87bf7c3f4a28cc" }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
pyo3 = { version = "0.29.0", features = ["abi3-py312", "py-clone", "multiple-pymethods"] }
rangemap = "1.7.1"
send_wrapper = "0.6.0"
indexmap = { version = "2.14", features = ["serde"] }
fixedbitset = "0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11"
rustc-hash = "2"
target-lexicon = "0.13.5"

[dev-dependencies]
tempfile = "3.27.0"
