[package]
name = "clarirs-py"
version = "0.1.0"
edition = "2024"
description = "Python bindings for clarirs"
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
pyo3 = { version = "0.29.0", features = ["num-bigint"] }
clarirs-core = { path = "../clarirs-core", features = ["runtime-checks"] }
clarirs-num = { path = "../clarirs-num" }
clarirs-vsa = { path = "../clarirs-vsa" }
clarirs-z3 = { path = "../clarirs-z3" }
thiserror = { workspace = true }
num-bigint = "0.4.6"
log = "0.4.32"
dashmap = "6.2.1"

[lib]
name = "claripy"

[lints]
workspace = true
