[package]
name = "clarirs-vsa"
version = "0.1.0"
edition = "2024"
description = "Value Set Analysis for Clarirs"
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
clarirs_core = { path = "../clarirs_core" }
num-bigint = { version = "0.4.6" }
num-traits = "0.2"
