[package]
name = "clarirs-z3"
version = "0.1.0"
edition = "2024"
description = "Z3 solver for clarirs"
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
clarirs-core = { path = "../clarirs-core" }
z3-sys = { version = "0.11", features = ["gh-release"] }
regex = "1.12"

[lints]
workspace = true
