[package]
name = "clarirs_num"
version = "0.1.0"
edition = "2024"
description = "Numeric types for clarirs"
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = { version = "1.15.1", features = ["serde"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
