[package]
name = "clarirs_py"
version = "0.1.0"
edition = "2024"
description = "Python bindings for clarirs"
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
pyo3 = { version = "0.29.0", features = ["num-bigint"] }
clarirs_core = { path = "../clarirs_core", features = ["runtime-checks"] }
clarirs_num = { path = "../clarirs_num" }
clarirs-vsa = { path = "../clarirs-vsa" }
clarirs_z3 = { path = "../clarirs_z3" }
thiserror = { workspace = true }
num-bigint = "0.4.6"
log = "0.4.32"
dashmap = "6.2.1"

[lib]
name = "claripy"

[lints]
workspace = true
